# reference-dev-repo

./: .bazelrc  .gitignore  MODULE.bazel  README.md  setup.sh
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json  docker-compose.yaml  requirements-apt.txt  requirements-pip.txt
projects/examples/grpc/: BUILD.bazel  README.md  example.proto  example_grpc_client.cc  example_grpc_client.py  example_grpc_server.cc
projects/examples/grpc/proto/: BUILD.bazel  example.proto
projects/examples/hello_world/: BUILD.bazel  main.cpp
