cc_binary(
    name = "example_grpc_client",
    srcs = ["example_grpc_client.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//projects/examples/grpc/proto:example_cc_grpc",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
)

cc_binary(
    name = "example_grpc_server",
    srcs = ["example_grpc_server.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "//projects/examples/grpc/proto:example_cc_grpc",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@grpc//:grpc++_reflection",
    ],
)

py_binary(
    name = "example_grpc_client_py",
    srcs = ["example_grpc_client.py"],
    main = "example_grpc_client.py",
    deps = [
        "//projects/examples/grpc/proto:example_python_grpc",
    ],
)
