# References
# - https://github.com/rules-proto-grpc/rules_proto_grpc/blob/master/examples/cpp/cpp_grpc_library/BUILD.bazel

load("@rules_proto_grpc_cpp//:defs.bzl", "cc_grpc_compile", "cc_grpc_library")
load("@rules_proto_grpc_python//:defs.bzl", "python_grpc_library")

# Proto

proto_library(
    name = "example_proto",
    srcs = ["example.proto"],
)

# CC
cc_grpc_library(
    name = "example_cc_grpc",
    protos = [":example_proto"],
    visibility = ["//visibility:public"],
)

cc_grpc_compile(
    name = "example_cc_grpc_compile",
    protos = [":example_proto"],
)

# PY

python_grpc_library(
    name = "example_python_grpc",
    protos = [":example_proto"],
    visibility = ["//visibility:public"],
)
